[package]
name = "nimiq-metrics-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Prometheus metrics server for the Nimiq Rust implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
bytes = "1.9"
futures = { workspace = true }
http-body-util = { version = "0.1" }
hyper = { version = "1.5" }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
log = { workspace = true }
parking_lot = "0.12"
prometheus-client = "0.23.0"
tokio = { version = "1.43", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "tracing",
] }
tokio-metrics = "0.4"

nimiq-blockchain = { workspace = true, features = ["metrics"] }
nimiq-blockchain-interface = { workspace = true }
nimiq-blockchain-proxy = { workspace = true, features = ["full"] }
nimiq-consensus = { workspace = true, features = ["full"] }
nimiq-mempool = { workspace = true, features = ["metrics"] }
nimiq-network-interface = { workspace = true }
nimiq-network-libp2p = { workspace = true, features = ["metrics"] }
nimiq-primitives = { workspace = true, features = ["coin"], optional = true }
nimiq-time = { workspace = true }
nimiq-utils = { workspace = true, features = ["spawn"] }

[features]
extended-staking = ["nimiq-primitives/coin"]
