[package]
name = "nimiq-time"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "tokio::time for Rust and WASM"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
pin-project-lite = "0.2.16"
send_wrapper = { version = "0.6", features = ["futures"] }
tokio = { version = "1.43", features = ["time"] }
tokio-stream = { version = "0.1", features = ["time"] }
